--- a/main.css
+++ b/main.css
@@ -65,3 +65,32 @@ footer nav {
     - 1px -1px 0 white,
 
 }
+
+.aws-div-icon-wind span {
+    font-size: 3em;
+    font-weight: bold;
+    transform: translate(-30%, -50%);
+    padding: 0.5em;
+    display: inline-block;
+    text-shadow:
+    - 1px -1px 0 black,
+    - 1px -1px 0 black,
+    - 1px -1px 0 black,
+    - 1px -1px 0 black,
+
+}
+.aws-div-icon-snow span {
+    border: 1px solid silver;
+    border-radius: 0.5em;
+    font-size: 1.25 em;
+    font-weight: bold;
+    padding: 0.3em;
+    transform: translate(-30%, -50%);
+    display: inline-block;
+    text-shadow:
+    - 1px -1px 0 white,
+    - 1px -1px 0 white,
+    - 1px -1px 0 white,
+    - 1px -1px 0 white,
+
+}
