--- a/main.css
+++ b/main.css
@@ -59,10 +59,10 @@ footer nav {
     transform: translate(-30%, -50%);
     display: inline-block;
     text-shadow:
-    - 1px -1px 0 white,
-    - 1px -1px 0 white,
-    - 1px -1px 0 white,
-    - 1px -1px 0 white,
+    -1px -1px 0 white,
+    -1px -1px 0 white,
+    -1px -1px 0 white,
+    -1px -1px 0 white,
 
 }
 
@@ -73,10 +73,10 @@ footer nav {
     padding: 0.5em;
     display: inline-block;
     text-shadow:
-    - 1px -1px 0 black,
-    - 1px -1px 0 black,
-    - 1px -1px 0 black,
-    - 1px -1px 0 black,
+    -1px -1px 0 black,
+    -1px -1px 0 black,
+    -1px -1px 0 black,
+    -1px -1px 0 black;
 
 }
 .aws-div-icon-snow span {
@@ -88,9 +88,9 @@ footer nav {
     transform: translate(-30%, -50%);
     display: inline-block;
     text-shadow:
-    - 1px -1px 0 white,
-    - 1px -1px 0 white,
-    - 1px -1px 0 white,
-    - 1px -1px 0 white,
+    -1px -1px 0 white,
+    -1px -1px 0 white,
+    -1px -1px 0 white,
+    -1px -1px 0 white,
 
 }
